# pyThermoNDT

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements_dev.txt  setup.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  release.yml  trigger_run_tests.yml
.github/workflows/: build.yml  build_and_release.yml  build_and_release_conda_package.yml  bump_version.yml  code_ql.yml  generate_diagrams.yml  lint.yml  post_release.yml  pr-validation.yml  pr_checks.yml  prepare_release.yml  publish.yml  run_tests.yml  tests.yml  update_cache.yml
conda/: meta.yaml
docs/pyreverse/: classes_PyThermoNDT.gv  classes_pythermondt.data.datacontainer.gv  classes_pythermondt.data.gv  classes_pythermondt.data.units.gv  classes_pythermondt.gv  classes_pythermondt.readers.gv  classes_pythermondt.transforms.gv  classes_pythermondt.writers.gv  packages_PyThermoNDT.gv  packages_pythermondt.data.datacontainer.gv  packages_pythermondt.data.gv  packages_pythermondt.data.units.gv  packages_pythermondt.gv  packages_pythermondt.readers.gv  packages_pythermondt.transforms.gv  packages_pythermondt.writers.gv
docs/pyreverse/graphviz/: classes_Overview.gv  classes_pythermondt.data.datacontainer.gv  classes_pythermondt.data.gv  classes_pythermondt.data.units.gv  classes_pythermondt.dataset.gv  classes_pythermondt.gv  classes_pythermondt.io.gv  classes_pythermondt.readers.gv  classes_pythermondt.transforms.gv  classes_pythermondt.utils.gv  classes_pythermondt.writers.gv  packages_Overview.gv  packages_pythermondt.data.datacontainer.gv  packages_pythermondt.data.gv  packages_pythermondt.dataset.gv  packages_pythermondt.gv  packages_pythermondt.io.gv  packages_pythermondt.readers.gv  packages_pythermondt.transforms.gv  packages_pythermondt.utils.gv
docs/pyreverse/mermaid/: classes_Node_Hierarchy.mmd  classes_Overview.mmd  classes_Transform_Hierarchy.mmd  classes_pythermondt.data.datacontainer.mmd  classes_pythermondt.data.mmd  classes_pythermondt.data.units.mmd  classes_pythermondt.dataset.mmd  classes_pythermondt.io.backends.mmd  classes_pythermondt.io.mmd  classes_pythermondt.io.parsers.mmd  classes_pythermondt.mmd  classes_pythermondt.readers.mmd  classes_pythermondt.transforms.mmd  classes_pythermondt.writers.mmd  packages_Overview.mmd  packages_pythermondt.data.datacontainer.mmd  packages_pythermondt.data.mmd  packages_pythermondt.data.units.mmd  packages_pythermondt.dataset.mmd  packages_pythermondt.io.backends.mmd  packages_pythermondt.io.mmd  packages_pythermondt.io.parsers.mmd  packages_pythermondt.mmd  packages_pythermondt.readers.mmd  packages_pythermondt.transforms.mmd  packages_pythermondt.writers.mmd
examples/: example1_loading_data.ipynb  example2_writing_data copy.ipynb  example2_writing_data.ipynb  example3_transforming_data.ipynb  example4_model_training.ipynb
examples/example_data/: example-data0.hdf5  example-data1.hdf5  example-data2.hdf5
examples/example_data/subfolder1/: example-data0.hdf5
examples/example_models/: defect_classifier.py
examples/example_saving_data/: .gitignore
src/pythermondt/: __init__.py  config.py  plugins.py
src/pythermondt/data/: __init__.py  _base_reader.py  base_reader.py  data_container.py  pytorch_dataset.py  simulation_reader.py  thermo_container.py  thermo_dataset.py  thermo_subset.py  utils.py
src/pythermondt/data/datacontainer/: __init__.py  attribute_ops.py  attributes.py  base.py  core.py  dataset_ops.py  datasets.py  group_ops.py  groups.py  interface.py  node.py  serialization_ops.py  utils.py  visualization_ops.py
src/pythermondt/data/datacontainerv2/: attributes.py  container.py  data_container.py  dataset.py  groups.py  path_check.py
src/pythermondt/data/datacontainerv3/: __init__.py  container.py  node.py  utils.py
src/pythermondt/data/datacontainerv4/: __init__.py  attribute_ops.py  base_ops.py  container.py  container.pyi  dataset_ops.py  generate_stub.py  group_ops.py  node.py
src/pythermondt/data/units/: __init__.py  _unit.py  units.py  utils.py
src/pythermondt/dataset/: __init__.py  base.py  indexed_thermo_dataset.py  thermo_dataset.py  utils.py
src/pythermondt/io/: __init__.py  utils.py
src/pythermondt/io/backends/: __init__.py  azure_backend.py  base_backend.py  local_backend.py  progress.py  s3_backend.py
src/pythermondt/io/parsers/: __init__.py  base_parser.py  edevis_parser.py  (+2 more)
src/pythermondt/readers/: __init__.py  _base_reader.py  azure_reader.py  base_reader.py  base_reader_rewrite.py  hdf5_reader.py  local_reader.py  local_reader_rewrite.py  s3_reader.py  s3_reader_rewrite.py  simulation_reader.py
src/pythermondt/readersv2/: __init__.py  aws_reader.py  base_reader.py  local_reader.py  s3_reader.py
src/pythermondt/transforms/: __init__.py  augmentation.py  base.py  frequency.py  normalization.py  phase_transform.py  preprocessing.py  sampling.py  utils.py
src/pythermondt/utils/: __init__.py  io.py
src/pythermondt/writers/: README.md  __init__.py  aws_writer.py  azure_writer.py  base_writer.py  hdf5_writer.py  local_writer.py  s3_writer.py
tests/: __init__.py  conftest.py  test_data_container.py  test_node.py  test_thermo_container.py  utils.py
tests/assets/simulation_data/: Data_2024-09-13 152432_73018.mat
tests/benchmark/: config.py  test_benchmark.py  test_transforms.py  utils.py
tests/data/: conftest.py  test_thermo_container.py  test_utils.py
tests/data/datacontainer/: conftest.py  test_attribute_ops.py  test_base.py  test_core.py  test_data_container.py  test_dataset_ops.py  test_group_ops.py  test_node.py  test_serialization_ops.py  test_utils.py
tests/data/units/: test_units.py
tests/dataset/: conftest.py  test_indexed_thermo_dataset.py  test_thermo_dataset.py
tests/integration/: conftest.py  test_integration.py  test_reader.py  utils.py
tests/io/backends/: conftest.py  test_backend_interface.py  test_local_backend.py  test_s3_backend.py  utils.py
tests/io/parsers/: test_base_parser.py  test_hdf5_parser.py  test_simulation_parser.py
(+12 files in other folders)
