[project]
name = "pythermondt"
dynamic = ["version"]
description = "A Python package for manipulating thermographic data in Non-Destructive Testing (NDT) applications."
authors = [{name = "Julian Grimm", email = "julian.grimm@fh-wels.at"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    # General dependencies
    "tqdm>=4.65",
    "ipywidgets>=8.0",
    "ipykernel>=6.25",

    # Data loading and visualization
    "h5py>=3.9",
    "mat73>=0.65",
    "numpy>=1.23",
    "matplotlib>=3.7",

    # Machine learning
    "torch>=2.0",

    # AWS
    "boto3>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.1",
    "ruff>=0.9",
    "pre-commit>=3.5",
    "bump-my-version>=1.0",
]

# Config for the build system
[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.dynamic]
version = {attr = "pythermondt.__pkginfo__.__version__"}

# Configure additional tools
# Pytest
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--import-mode=importlib",
]
testpaths = ["tests"]


# UV
[tool.uv]
required-version = "~=0.6.0" # Pin uv to major version 0.6 for stability


# Ruff
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "./examples/*", # Exclude the example notebooks from linting
    "./docs/pyreverse/*", # Exclude the pyreverse output from linting
]

[tool.ruff.lint]
select = [
    "E", # pydocstyle error
    "F", # pyflakes
    "W", # pydocstyle warning
    "I", # Isort
    "B", # flake8-bugbear
    "N", # pep8-naming
    "UP", # pyupdate
    "D", # pydocstyle
]
fixable = ["ALL"]
pydocstyle.convention = "google"
ignore = [
    "UP038", # Use X | Y in {} call instead of (X, Y) ==> Ignore for performance reasons, see: https://github.com/astral-sh/ruff/issues/7871
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in `__init__`
]

[tool.ruff.format]
docstring-code-format = true # Enable reformatting of code snippets in docstrings.
quote-style = "double"

# Bump Version
[tool.bumpversion]
current_version = "0.1.6dev"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>dev)?"
serialize = [
    "{major}.{minor}.{patch}{release}",
    "{major}.{minor}.{patch}"
]
ignore_current_version = true
tag_name = "{new_version}"
message = "Bump version: {current_version} → {new_version}"

[tool.bumpversion.parts.release]
optional_value = ""
values = [
    "dev",
    ""
]

[[tool.bumpversion.files]]
filename = "src/pythermondt/__pkginfo__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
